<resources>
    <string name="app_name">Coming Soon</string>

    <string name="action_settings">Settings</string>
    <string name="action_filter">Filter</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_details">Movie Details</string>

    <string name="title_videos">Videos</string>
    <string name="title_reviews">Reviews</string>
    <string name="title_favorite">Favorite</string>
    <string name="title_filter">Filter</string>
    <string name="poster_description">Movie Poster</string>
    <string name="backdrop_description">Backdrop Image</string>

    <!-- START PREFERENCES -->
    <string name="pref_api_key_label" >TheMovieDB API Key</string>
    <string name="pref_api_key_key" translatable="false">api_key</string>

    <string name="pref_sort_label">Filter</string>
    <string name="pref_sort_key" translatable="false">sort_order</string>
    <string name="pref_sort_popular" translatable="false">popularity.desc</string>
    <string name="pref_sort_rating" translatable="false">vote_average.desc</string>
    <string name="pref_sort_top_rated" translatable="false">top_rated</string>
    <string name="pref_sort_now_playing" translatable="false">now_playing</string>
    <string name="pref_sort_upcoming" translatable="false">upcoming</string>
    <string name="pref_sort_favorite" translatable="false">favorites</string>
    <string name="pref_sort_default" translatable="false">@string/pref_sort_popular</string>
    <!-- END PREFERENCES -->

</resources>
