<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditTextPreference
        android:key="@string/pref_api_key_key"
        android:title="@string/pref_api_key_label"
        android:dialogTitle="@string/pref_api_key_label"
        android:inputType="text"
        android:singleLine="true" />

    <ListPreference
        android:key="@string/pref_sort_key"
        android:title="@string/pref_sort_label"
        android:dialogTitle="@string/pref_sort_label"
        android:entries="@array/pref_sort_entries"
        android:entryValues="@array/pref_sort_values"
        android:defaultValue="@string/pref_sort_default" />

</PreferenceScreen>